# src/api/routers/product.go
@@ -1,0 +1,18 @@
+package routers
+
+import (
+	"github.com/alielmi98/go-ecommerce-api/api/handlers"
+	"github.com/alielmi98/go-ecommerce-api/config"
+	"github.com/gin-gonic/gin"
+)
+
+func Product(r *gin.RouterGroup, cfg *config.Config) {
+	h := handlers.NewProductHandler(cfg)
+
+	r.POST("/", h.Create)
+	r.PUT("/:id", h.Update)
+	r.DELETE("/:id", h.Delete)
+	r.GET("/:id", h.GetById)
+	r.POST("/get-by-filter", h.GetByFilter)
+
+}
